<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/loadadf"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/load_adf_on"
        android:textOff="@string/load_adf_off"
        android:onClick="loadAdfClicked" />

    <ToggleButton
        android:id="@+id/learningmode"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/learning_mode_on"
        android:textOff="@string/learning_mode_off"
        android:onClick="learningModeClicked" />

    <Button
        android:id="@+id/start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start" 
        android:textSize="15sp"
        android:onClick="startClicked" />

    <Button
        android:id="@+id/adflist"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_adfs" 
        android:textSize="15sp"
        android:onClick="adfListViewClicked" />

</LinearLayout>
